added CSS formatting

--- a/index.html
+++ b/index.html
@@ -10,52 +10,99 @@
 
 <body>
     <header>
-        <h1>Dan Isbister</h1>
-        <nav>
+        <!--<img src="Assets/banner.jpg">-->  
+            <h1>Dan Isbister</h1>
+            <nav>
             <ul>
                 <button>About Me</button>
                 <button>Work</button>
                 <button>Resume</button>
                 <button>Contact Me</button>
             </ul>
-        </nav>
+            </nav>       
     </header>
 
     <main>
-        <section class="aboutme">
-            <section class="cardleft">
-                <h2>About me</h2>
-            </section>
-            <section class="cardright">
+        <section>      
+            <div class="aboutmehead">
+                <p>About Me</p>
+            </div>
+            <div class="aboutmebody">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </section>
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
         </section>
-        <section class="work">
-            <section class="cardleft">
-                <h2>Work</h2>
+        <section>
+            <div class="workhead">
+                <p>My Work</p>
+            </div>
+            <div class="workbody">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </section>
+        <section>
+            <div class="contacthead">
+                <p>Contact Me</p>
+            </div>
+            <div class="contactbody">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </section>       
+    </main>
+    <footer>
+        <p>D. Isbister 2023</p>
+    </footer>
+</body>    
+
+
+
+
+        <!--
+            <section id="aboutme">        
+                <section class="cardleft1">
+                    <h2>About me</h2>
+                </section>
+                <section class="cardright1">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </section>                    
             </section>
-            <section class="cardright">
+            
+            
+            <section id="work">
+                <section class="cardleft2">
+                    <h2>Work</h2>
+                </section>
+                <section class="cardright2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+                        mollit anim id est laborum.</p>
+                </section>
+            </section>    
+
+            <section id="contact">
+                <section class="cardleft3">
+                    <h2>Contact Me</h2>
+                </section>
+            <section class="cardright3">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
                     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
                     ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
                     fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
                     mollit anim id est laborum.</p>
-            </section>
-        <section class="contact">
-            <section class="cardleft">
-                <h2>Contact Me</h2>
-            </section>
-        <section class="cardright">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-                mollit anim id est laborum.</p>
-        </section>    
-        </section>    
-        </section>    
+            </section>   
     </main>
 </body>
+-->
