more CSS updates

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
         <!--<img src="Assets/banner.jpg">-->  
             <h1>Dan Isbister</h1>
             <nav>
-            <ul>
-                <button>About Me</button>
-                <button>Work</button>
-                <button>Resume</button>
-                <button>Contact Me</button>
-            </ul>
+                <ul
+                    <li><a href="#aboutmehead">About Me</a></li>
+                    <li><a href="#workhead">Work</a></li>
+                    <li><a href="#Resume">Resume</a></li>
+                    <li><a href="#contacthead">Contact Me</a></li>
+                </ul>
             </nav>       
     </header>
 
     <main>
         <section>      
             <div class="aboutmehead">
+                <!--<img src="Assets/IMG_2718.jpg">-->
                 <p>About Me</p>
             </div>
             <div class="aboutmebody">
