--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="Portfolio" content="width=device-width, initial-scale=1.0" />
         <title>Portfolio</title>
-        <link rel="stylesheet" href="\Assets\style.css" />
+        <link rel="stylesheet" href="Assets\style.css" />
     </head>
 </html>
 
