--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </header>
 
     <main>
-        <section>      
+        <section class="about">      
             <div class="aboutmehead">
-                <!--<img src="Assets/IMG_2718.jpg">-->
+                <img src="Assets/IMG_2718.jpg">
                 <p>About Me</p>
             </div>
             <div class="aboutmebody">
@@ -47,15 +47,19 @@
             </div>
         </section>
         
-        <section>
+        <section class=contact>
             <div class="contacthead">
                 <p>Contact Me</p>
             </div>
             <div class="contactbody">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <nav>
+                    <ul
+                        <li><a href="#">Email</a></li>
+                        <li><a href="#https://github.com/1DanIs1"></a>Github</li>
+                        <li><a href="#">Resume</a></li>
+                        <li><a href="#">Twitter</a></li>
+                    </ul>
+                </nav>
             </div>
         </section>       
     </main>
