--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="about">      
             <div class="aboutmehead">
-                <img src="Assets/IMG_2718.jpg">
+                <div style="float: left;"></div><img src="Assets/IMG_2718.jpg">
                 <p>About Me</p>
             </div>
             <div class="aboutmebody">
