added About Me text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul
                     <li><a href="#aboutmehead">About Me</a></li>
                     <li><a href="#workhead">Work</a></li>
-                    <li><a href="#Resume">Resume</a></li>
+                    <li><a href="#contacthead">Resume</a></li>
                     <li><a href="#contacthead">Contact Me</a></li>
                 </ul>
             </nav>       
@@ -29,10 +29,14 @@
                 <p>About Me</p>
             </div>
             <div class="aboutmebody">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Throughout my career, I have immersed myself in the captivating world of medical science, 
+                    dedicating countless hours to understanding the intricacies of the human body and developing 
+                    innovative solutions to improve patient care. However, my thirst for knowledge extends beyond 
+                    the confines of the laboratory. I have always been captivated by the power of technology and 
+                    its potential to revolutionize the healthcare industry. <br><br><br>Join me on this exhilarating journey as I embrace the opportunities and challenges of becoming a full stack web developer, merging my 
+                    passion for medical science with the boundless potential of the digital world. Together, we can 
+                    transform the way we approach healthcare and empower professionals to make a difference in the lives 
+                    of countless individuals.</p>
             </div>
         </section>
         
