added all project images to assets folder and HTML

--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
                 <div>
                     <a href="https://github.com/1DanIs1/code-refactoring"><img src="Assets\Horiseon.jpg"></a>
                 </div>
+                <!--<div>
+                    <img src="Assets\Project2.jpg">
+                </div>
+                <div>
+                    <img src="Assets\Project3.jpg">
+                </div>
+                <div>
+                    <img src="Assets\Project4.jpg">
+                </div>
+                <div>
+                    <img src="Assets\Project5.jpg">
+                </div>
+                <div>
+                    <img src="Assets\Project6.jpg">
+                </div>
+                <div>
+                    <img src="Assets\Project7.jpg">
+                </div>-->
             </div>
         </section>
         
