--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <nav>
                     <ul
                         <li><a href="#">Email</a></li>
-                        <li><a href="#https://github.com/1DanIs1"></a>Github</li>
+                        <li><a href="https://github.com/1DanIs1">Github</a></li>
                         <li><a href="#">Resume</a></li>
                         <li><a href="#">Twitter</a></li>
                     </ul>
