--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             </div>
             <div class="contactbody">
                 <nav>
-                    <ul
+                    <ul>
                         <li><a href="#">Email</a></li>
                         <li><a href="https://github.com/1DanIs1">Github</a></li>
                         <li><a href="#">Resume</a></li>
-                        <li><a href="#">Twitter</a></li>
+                        <li><a href="https://twitter.com/danisbister">Twitter</a></li>
                     </ul>
                 </nav>
             </div>
