--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <section class="about">      
+        <section id="about">      
             <div class="aboutmehead">
                 <div style="float: left;"></div><img src="Assets/IMG_2718.jpg">
                 <p>About Me</p>
@@ -40,7 +40,7 @@
             </div>
         </section>
         
-        <section class="work">
+        <section id="work">
             <div class="workhead">
                 <p>My Work</p>
             </div>
@@ -69,7 +69,7 @@
             </div>
         </section>
         
-        <section class=contact>
+        <section id=contact>
             <div class="contacthead">
                 <p>Contact Me</p>
             </div>
