added some comments

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 <div>
                     <a href="https://github.com/1DanIs1/code-refactoring"><img src="Assets\Horiseon.jpg"></a>
                 </div>
-                <!--<div>
+                <!-- I spent way too long trying to figure out how to fit all the images in and make the first one bigger
+                    and I almost lost my mind, so this is as far as I got unfortunately.
+                <div>
                     <img src="Assets\Project2.jpg">
                 </div>
                 <div>
